[package]
name = "scilla"
description = "A game framework for fast, performance based 2d games"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[workspace]
members = ["crates/*"]
package.version = "0.0.0"
package.authors = ["Emerald"]
package.license = "MIT Or Apache-2.0"
package.edition = "2021"

[workspace.dependencies]
wgpu = "22.1.0"
winit = "0.30.5"

[dependencies]
wgpu.workspace = true
winit.workspace = true
